Starting new version

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://ayubkureshi0707:%40Ayub2107@cluster0.ohikc.mongodb.net/recipeDB?retryWrites=true&w=majority
+MONGO_URI='mongodb+srv://ayubkureshi0707:%40Ayub2107@cluster0.ohikc.mongodb.net/recipeDB?retryWrites=true&w=majority'
 
 PORT=3000
 
